--- a/styles/style.css
+++ b/styles/style.css
@@ -609,7 +609,7 @@
         height: 70vh;
     }
 
-    .heading-1, .profession{
+    .heading-1, .profession, .affiliations{
         font-size: 14px;;
     }
 
