--- a/styles/style.css
+++ b/styles/style.css
@@ -37,7 +37,7 @@
     padding: 5px;
 }
 
-.profession, .know-me-container{
+.profession, .know-me-container, .affiliations{
     font-size: medium;
     margin-bottom: 10px;
     padding: 5px;
